--- a/.github/workflows/dotnet-format-daily.yml
+++ b/.github/workflows/dotnet-format-daily.yml
@@ -21,7 +21,7 @@ jobs:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           action: "fix"
           #only-changed-files: true # only works for PRs
-          workspace: "samples/XCT.Sample.sln"
+          workspace: "Xamarin.CommunityToolkit.sln"
     
       - name: Commit files
         if: steps.format.outputs.has-changes == 'true'
