--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -206,15 +206,14 @@ jobs:
             $(PathToMsBuildOnMacOS) $(PathToUnitTestCsproj) /p:Configuration=UnitTest /p:Platform="Any CPU" /restore /t:Build
 
             UnitTestDLLNet461=`find . -name Xamarin.CommunityToolkit.UnitTests.dll | grep bin | grep 461`
-            XUnitConsoleRunnerNet461=`find ~/.nuget/packages/xunit.runner.console/ | grep 461 | grep xunit.console.exe | grep -v config`
+            XUnitConsoleRunnerNet461=`find / | grep 461 | grep xunit.console.exe | grep -v config | head 1`
 
             echo UnitTestDLLNet461: $(UnitTestDLLNet461)
             echo XUnitConsoleRunnerNet461: $(XUnitConsoleRunnerNet461)
 
             mono "$(XUnitConsoleRunnerNet461)" "($XUnitConsoleRunnerNet461)"
 
-            echo Running Unit Tests on .NET Core
-            dotnet restore $(PathToUnitTestCsproj) /p:Configuration=Release /p:Platform="NetCore"
+            echo "Running Unit Tests on .NET Core"
             dotnet test $(PathToUnitTestCsproj) /p:Configuration=Release /p:Platform="NetCore"
       - task: CmdLine@2
         displayName: 'Pack NuGets'
