--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -201,20 +201,13 @@ jobs:
         inputs:
           script: |
             dotnet restore $(PathToUnitTestCsproj) /p:Configuration=Release
+            $(PathToMsBuildOnMacOS) $(PathToUnitTestCsproj) /p:Configuration=UnitTest /p:Platform="" /restore /t:Build
 
             echo "Running Unit Tests on .NET Framework (xUnit does not support dotnet test for .NET Framework: https://xunit.net/docs/getting-started/netfx/cmdline)"
-            $(PathToMsBuildOnMacOS) $(PathToUnitTestCsproj) /p:Configuration=UnitTest /p:Platform="Any CPU" /restore /t:Build
+            echo UnitTestDLL for .NET Framework 4.6.1 Result: `find . -name Xamarin.CommunityToolkit.UnitTests.dll | grep bin | grep 461`
+            echo XUnit Console Runner for .NET Framework 4.6.1 Result:`find ~/.nuget/packages | grep net461 | grep xunit.console.exe | grep -v config`
 
-            echo UnitTestDLLNet461 Result: `find . -name Xamarin.CommunityToolkit.UnitTests.dll | grep bin | grep 461`
-            echo XUnitConsoleRunnerNet461 Result: `find ~/.nuget/packages/ | grep net461 | grep xunit.console.exe | grep -v config`
-
-            UnitTestDLLNet461=`find . -name Xamarin.CommunityToolkit.UnitTests.dll | grep bin | grep 461`
-            XUnitConsoleRunnerNet461=`find ~/.nuget/packages/ | grep net461 | grep xunit.console.exe | grep -v config`
-
-            echo UnitTestDLLNet461: $(UnitTestDLLNet461)
-            echo XUnitConsoleRunnerNet461: $(XUnitConsoleRunnerNet461)
-
-            mono "$(XUnitConsoleRunnerNet461)" "($XUnitConsoleRunnerNet461)"
+            mono "`find ~/.nuget/packages | grep net461 | grep xunit.console.exe | grep -v config`" "`find . -name Xamarin.CommunityToolkit.UnitTests.dll | grep bin | grep 461`"
 
             echo "Running Unit Tests on .NET Core"
             dotnet test $(PathToUnitTestCsproj) /p:Configuration=Release /p:Platform="NetCore"
