--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -211,6 +211,7 @@ jobs:
             mono "`find ~/.nuget/packages | grep net461 | grep xunit.console.exe | grep -v config`" "`find . -name Xamarin.CommunityToolkit.UnitTests.dll | grep bin | grep 461`"
 
             echo "***** Running Unit Tests on .NET Core *****"
+            echo temp
             dotnet test $(PathToUnitTestCsproj) /p:Configuration=Release /p:Platform="macOS"
       - task: CmdLine@2
         displayName: 'Pack NuGets'
