--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -134,7 +134,7 @@ jobs:
       - task: CmdLine@2
         displayName: 'Run Unit Tests'
         inputs:
-          script: dotnet test $(PathToUnitTestCsproj) -c Release --collect "Code coverage"
+          script: dotnet test $(PathToUnitTestCsproj) -c Release --collect "Code coverage" -p:BuildInParallel=false
       # publish the packages
       - task: PublishBuildArtifacts@1
         displayName: 'Publish Unsigned NuGets'
@@ -193,7 +193,7 @@ jobs:
           version: $(NETCORE_TEST_VERSION_2_1)
           includePreviewVersions: false
       - task: CmdLine@2
-        displayName: 'Build Solution'
+        displayName: 'Build Xamarin.CommunityToolkit.csproj'
         inputs:
           script: '$(PathToMsBuildOnMacOS) $(PathToCommunityToolkitCsproj) /p:Configuration=Release /restore /t:Build /p:ContinuousIntegrationBuild=true /p:Deterministic=false'
       - task: CmdLine@2
