--- a/src/CommunityToolkit/Xamarin.CommunityToolkit/Xamarin.CommunityToolkit.csproj
+++ b/src/CommunityToolkit/Xamarin.CommunityToolkit/Xamarin.CommunityToolkit.csproj
@@ -208,4 +208,20 @@
     <Compile Remove="build\*.cs" />
     <None Include="build\**\*.cs;build\**\*.targets" Pack="true" PackagePath="build" />
   </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="Converters\MathExpressionConverter.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="Converters\MathExpressionConverter.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="Core\MathExpression.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="Core\MathExpression.cs" />
+  </ItemGroup>
 </Project>
