--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -61,10 +61,16 @@ jobs:
     pool:
       vmImage: windows-2019
     steps:
-      - task: CmdLine@2
-        displayName: 'Clean, Clear, and Restore NuGets'
+      - task: MSBuild@1
+        displayName: 'Clean Solution'
         inputs:
-          script: 'dotnet clean $(PathToSln) -c Release && dotnet nuget locals all --clear'
+          solution: $(PathToSln)
+          configuration: Release
+          msbuildArguments:  '/t:Clean'
+      - task: CmdLine@2
+        displayName: 'Clear Local NuGet Cache'
+        inputs:
+          script: 'nuget locals all -clear'
       - task: MSBuild@1
         displayName: Build Solution
         inputs:
@@ -92,6 +98,16 @@ jobs:
         inputs:
           version: $(NETCORE_TEST_VERSION_2_1)
           includePreviewVersions: false
+      - task: MSBuild@1
+        displayName: 'Clean Solution'
+        inputs:
+          solution: $(PathToSln)
+          configuration: Release
+          msbuildArguments:  '/t:Clean'
+      - task: CmdLine@2
+        displayName: 'Clear Local NuGet Cache'
+        inputs:
+          script: 'nuget locals all -clear'
       # if this is a tagged build, then update the version number
       - powershell: |
           $buildSourceBranch = "$(Build.SourceBranch)"
