--- a/samples/XCT.Sample.Tizen/Xamarin.CommunityToolkit.Sample.Tizen.csproj
+++ b/samples/XCT.Sample.Tizen/Xamarin.CommunityToolkit.Sample.Tizen.csproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\src\CommunityToolkit\Xamarin.CommunityToolkit\Xamarin.CommunityToolkit.csproj" />
     <ProjectReference Include="..\XCT.Sample\Xamarin.CommunityToolkit.Sample.csproj" />
   </ItemGroup>
